# zenodnf

./: .gitignore  .pylintrc  README.md  pyproject.toml  zeno-cli.py  zeno-pyinstall.sh  zenodnf-cli.py  zenodnf-pyinstall.sh
zeno/: __init__.py  __main__.py  operations.py  rich.py  zeno.py
zenodnf/: __init__.py  __main__.py  operations.py  rich.py  zenodnf.py
